sparta/common/scss/reset.scss
@import "./variable";

body, html {
  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
}

*::-ms-clear,
*::-ms-reveal {
  display: none;
}

*::-webkit-scrollbar {
  width: 10px;
  background-color: $scrollbar-background;
  &-track {
    border-radius: 10px;
    background-color: $scrollbar-track-color;
  }
  &-thumb {
    border-radius: 10px;
    background-color: $scrollbar-thumb-color;
  }
}

a {
  color: #333;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  text-decoration: none;
}

li {
  list-style: none;
}

button {
  outline: none;
}

input::placeholder {
  color: $color-text-placeholder;
}

::selection {
  background: $color-primary;
  color: $color-white;
}

